2005-06-28  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: post-release bump to 2.10.3.

==================== 2.10.2 ====================

2005-06-28  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 2.10.2.

2005-06-11  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "he" to ALL_LINGUAS.

2005-06-08  Mark McLoughlin  <mark@skynet.ie>

	Patch from Brian Cameron <brian.cameron@sun.com> in
	bug #304129

	* libmenu/libgnome-menu-uninstalled.pc.in: add pkg-config
	file to support building against an uninstalled 
	libgnome-menu.
	
	* configure.in: create libgnome-menu-uninstalled.pc
	
	* libmenu/Makefile.am: add uninstalled.pc to EXTRA_DIST

2005-06-05  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* configure.in: Added 'gl' to ALL_LINGUAS.

2005-04-15  Mark McLoughlin  <mark@skynet.ie>

	Fix for bug #300589 - if you've a .desktop file in
	the user's app dir and another in the system app dir,
	and they have a different set of categories, we'll
	match against both .desktop files when processing
	<Category>

	* libmenu/menu-tree.c:
	(get_by_category_foreach), (get_by_category): iterate
	over a DesktopEntrySet looking for entries which have
	a given category.
	(process_include_rules): take a DesktopEntrySet which
	contains the pool of desktop file IDs available, rather
	than an EntryDirectoryList.
	(process_layout): generate a pool of desktop file IDs
	for matching against.
	
	* libmenu/entry-directories.[ch]:
	(entry_directory_list_get_by_category),
	(entry_directory_list_invert_set): remove, they're unused
	now.

2005-04-14  Mark McLoughlin  <mark@skynet.ie>

	Fix for bug #300499. Random foo showing up in the panel's
	Desktop menu.

	* layout/settings.menu: remove all <LegacyDir>s

2005-04-07  Mark McLoughlin  <mark@skynet.ie>

	Probably doesn't cause any problems in practice, just
	a correctness fix.

	* libmenu/menu-tree.c: (menu_tree_entry_unref): don't
	unref the parent because we don't hold a ref on it
	anymore.
